--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Matching Game</h1>
     <div id="buttons">
         <button ng-app="randomizePictures()">New Game</button>
+        <button ng-click="checkPicture()">Check if match</button>
     </div>
     <table>
         <tr>
