--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Matching Game</h1>
     <div id="buttons">
         <button ng-click="init()" ng-app="randomizePictures()">New Game</button>
+        <button ng-click="checkPicture()" ng-app="">Check Match</button>
+
     </div>
     <table>
         <tr>
